# mesh-template

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  bootnodes_keys_test.json  mock_hypertensor.db  modal_ci.py  pyproject.toml  requirements.txt  server4client.id  setup.py
benchmarks/: benchmark_dht.py  benchmark_tensor_compression.py
bootnode_utils/: README.md
mesh/dht/: crypto.py  dht.py  node.py  protocol.py  schema.py  validation.py
mesh/mesh_cli/: run_dht.py  run_dht_api.py  run_hoster.py  run_hoster_test.py  run_hoster_test_mock.py  run_server.py  run_server_mock.py
mesh/p2p/: p2p_daemon.py
mesh/proto/: dht.proto
subnet/: __init__.py
tests/: conftest.py  test_auth.py  test_auth_ed25519.py  test_auth_rsa.py  test_auth_streamer.py  test_auth_streamer_ed25519.py  test_auth_streamer_rsa.py  test_base58.py  test_cli_scripts.py  test_compression.py  test_dht.py  test_dht_client.py  test_dht_crypto.py  test_dht_crypto_ed25519.py  test_dht_crypto_rsa.py  test_dht_node.py  test_dht_protocol.py  test_dht_protocol_v2.py  test_dht_schema.py  test_dht_schema_ed25519.py  test_dht_schema_rsa.py  test_dht_storage.py  test_dht_storage_v2.py  test_dht_validation.py  test_dht_validation_ed25519.py  test_dht_validation_predicate.py  test_dht_validation_rsa.py  test_ip_api.py  test_mock_commit_reveal.py  test_multiaddr.py  test_multiaddr_protocols.py  test_multiaddr_transforms.py  test_p2p_daemon.py  test_p2p_daemon_bindings.py  test_p2p_servicer.py  test_pk.py  test_relays.py  test_routing.py  test_session.py  test_start_server.py  (+1 more)
(+142 files in other folders)
