[build-system]
requires = ["setuptools>=45", "wheel", "grpcio-tools"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.coverage.run]
concurrency = ["thread", "multiprocessing"]
omit = ["subnet/proto/*"]
source = ["subnet"]
parallel = true
sigterm = true

[tool.ruff]
exclude = [
    "__init__.py",
    "*_pb2.py"
]
line-length = 119
required-version = "==0.11.2"
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "YTT", "LOG"]
ignore = ["E501", "E702", "E731"]
dummy-variable-rgx = "^_$"

[tool.ruff.lint.isort]
known-local-folder = ["arguments", "test_utils", "tests", "utils"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
